# fastapi_alembic_xp

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 6813d72b29fb_your_message.py  a99f1b59bd3e_create_hero_table.py
hero_api/: app.py
hero_api/db/: hero.py
hero_api/models/: hero.py
